--- a/contactus.html
+++ b/contactus.html
@@ -156,12 +156,10 @@ Header Navigation Area
         <nav class="header_content">
             <ul class="nav smartMenu ">
                 <!--  Add require site page navigation -->
-                <li><a href="index.html" class="first active">Home</a></li>
                 <li><a href="index.html" class="first active">Nosotros</a></li>
-                <li><a href="parkerfluid.html">Fluid Connectors Parker</a></li>
-                <li><a href="rentademaquinaria.html">Renta de maquinaria</a></li>
-                <li><a href="servmovil.html">Servicio Movil Parker</a></li>
-                <li><a href="contactus.html" class="last"> Contacto</a></li>
+                            <li><a href="parkerfluid.html">Programas sociales</a></li>
+                            <li><a href="rentademaquinaria.html">Galería</a></li>
+                            <li><a href="contactus.html" class="last"> Contacto</a></li>
             </ul>
         </nav>
 
@@ -216,16 +214,7 @@ If you need this button just remove the comment code
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12 ">
-                                    <hr class="space_max">
                                     <div class="top_txt">
-                                        <div class="doubleBorder relativePos" data-animated-time="0"
-                                            data-animated-in="animated fadeInLeftBig" data-anchor-to="parent.parent">
-                                            <div>
-                                                <h1 class="inverseStyle backGround upperCase noMargin pad_20"
-                                                    data-animated-time="15" data-animated-in="animated fadeIn"
-                                                    data-anchor-to="parent.parent">
-                                                    Ponte en contacto</h1>
-                                            </div>
 
                                             <div class="move_up_endSection">
                                                 <div class="move_up mini plain nextSection"> <span> <i
@@ -282,29 +271,22 @@ If you need this button just remove the comment code
                             <div class="col-lg-5">
                                 <div class="tag_leftTitle">
                                     <span class="icon"><i class="icon-basic-map"></i></span>
-                                    <h5 class="light_weight">Vhsa</h5>
-                                    <h5 class="light_weight">Villahermosa,Tabasco</h5>
-                                </div>
-
-                                <div class="tag_leftTitle">
-                                    <span class="icon"><i class="icon-basic-smartphone"></i></span>
-                                    <h5>Celular</h5>
-                                    <h5 class="light_weight">+52 993 140 4746</h5>
+                                    <h5 class="light_weight">Corregidora No. 4 Int. 5 Fraccionamiento Laguna Seca</h5>
+                                    <h5 class="light_weight">Ahuazotepec, Puebla, México C.P. 73180</h5>
                                 </div>
 
 
                                 <div class="tag_leftTitle">
                                     <span class="icon"><i class="icon-basic-headset"></i></span>
                                     <h5>Teléfono</h5>
-                                    <h5 class="light_weight">+52 933 333 4862</h5>
-                                    <h5 class="light_weight">+52 933 207 6895</h5>
+                                    <h5 class="light_weight">01 776 76 10781</h5>
                                 </div>
 
                                 <div class="tag_leftTitle">
                                     <span class="icon"><i class="icon-basic-mail-open"></i></span>
                                     <h5>Email</h5>
-                                    <h5 class="light_weight"><a>maquinaria@gruposimap.com</a></h5>
-                                    <h5 class="light_weight"><a>ventas@parkerparaiso.com</a></h5>
+                                    <h5 class="light_weight"><a>ventas@floressierramagica.com</a></h5>
+                                    <h5 class="light_weight"><a>floressierramagica@gmail.com</a></h5>
                                 </div>
 
                                 <br>
@@ -360,7 +342,7 @@ If you need this button just remove the comment code
 
                     <div class="fullWidth map_holder greyBackground relativePos borderTop textAlignCenter">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15181.52174342032!2d-92.9533916!3d17.9610289!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85edd76c0edafc23%3A0xaee9991deae1bd9b!2sGrupo%20Simap%20Industrial%20SA%20de%20CV-%20Renta%20de%20Maquinaria%20Tabasco!5e0!3m2!1ses-419!2ses!4v1708165372254!5m2!1ses-419!2ses"
+                                src="https://www.google.com.mx/maps/place/Flores+de+la+Sierra+M%C3%A1gica/@20.0417424,-98.1825507,13z/data=!4m10!1m2!2m1!1sCorregidora+No.+4+Int.+5,+Fraccionamiento+Laguna+Seca,+Ahuazotepec,+Puebla,+M%C3%A9xico.+CP+73180!3m6!1s0x85d0674679dfb457:0x1e74dda1022a56d5!8m2!3d20.0349999!4d-98.1172222!15sCl1Db3JyZWdpZG9yYSBOby4gNCBJbnQuIDUsIEZyYWNjaW9uYW1pZW50byBMYWd1bmEgU2VjYSwgQWh1YXpvdGVwZWMsIFB1ZWJsYSwgTcOpeGljby4gQ1AgNzMxODBaWCJWY29ycmVnaWRvcmEgbm8gNCBpbnQgNSBmcmFjY2lvbmFtaWVudG8gbGFndW5hIHNlY2EgYWh1YXpvdGVwZWMgcHVlYmxhIG3DqXhpY28gY3AgNzMxODCSAQ1mbG93ZXJfbWFya2V04AEA!16s%2Fg%2F11j59qsygh?entry=ttu"
                                 style="border:0; width: 100vw; height: 400px" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
@@ -388,12 +370,10 @@ If you need this button just remove the comment code
                             </figure>
                             <hr class="separator_mini">
 
-                            <h5 class="light_weight tiny_font"> Copyright © 2023 Grupo Simap Industrial - Renta de
-                                Maquinaria Villahermosa - Todos los derechos reservados. </h5>
+                            <h5 class="light_weight tiny_font"> Copyright © 2024 Flores de la Sierra Mágica de Puebla- Todos los derechos reservados. </h5>
                             <hr class="separator_mini">
                             <ul class="font_awesome addFxEmbossBtn noBorder alignCenter">
-                                <li><a class="facebook"><i class="fa fa-facebook"></i></a></li>
-                                <li><a class="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                <a href="https://www.facebook.com/profile.php?id=100010983242581" target="_blank" title="Facebook"><span class="icon fa fa-facebook"></span></a>
                             </ul>
                         </div>
                     </div>
