--- a/index.html
+++ b/index.html
@@ -123,11 +123,20 @@
     <!--
     Header Navigation Area
     -->
-
+<!-- Left sidebar -->
+<div
+<section id="left-sidebar">
+    
+    <div class="idioma">
+        <a href="#">Español</a>
+        <a href="index2.html">English</a>
+    </div>
+    </section>
     <!-- Place your logo here -->
     <div class="logo posTopLeft">
         <a href="index.html" class="menu_link"><img src="images/logo.png" alt="logo text"></a>
     </div>
+    
 
 
     <div class="headerFixed  mini_menu">
