modificacion de programas sociales

--- a/programas sociales.html
+++ b/programas sociales.html
@@ -223,52 +223,6 @@
                             </div>
                         </div>
 
-                        <div class="item">
-                            <div class="full-width fullWidthSlider parallax lightBackground"
-                                data-src="images/background/image6.jpg" data-src-small="images/background/image6_s.jpg">
-                                <div class="container ">
-                                    <div class="row">
-                                        <div class="col-lg-12 textAlignCenter">
-                                            <hr class="separator_max">
-                                            <hr class="space_mini">
-                                            <hr class="mobile_spacing">
-                                            <h2 class="white_color bold_weight">Tenemos más de 15 variedades</h2>
-                                            <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing"> Listas
-                                                para adornar tu momento especial</h4>
-                                            <hr class="separator_mini">
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div class="item">
-                            <div class="full-width fullWidthSlider parallax darkBackground"
-                                data-src="images/background/black_image7.jpg"
-                                data-src-small="images/background/black_image7_s.jpg">
-                                <div class="container ">
-                                    <div class="row">
-                                        <div class="col-lg-12 textAlignCenter">
-                                            <hr class="separator_max">
-                                            <hr class="space_mini">
-                                            <hr class="mobile_spacing">
-                                            <h2 class="white_color bold_weight">Contamos con altos estándares de calidad
-                                            </h2>
-                                            <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing"> Estrictos
-                                                procedimientos en cultivo y poscosecha
-                                            </h4>
-                                            <hr class="separator_mini">
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
 
 
@@ -281,15 +235,27 @@
                                     <div class="col-lg-12">
                                         <div class="page_header text-center">
                                             <h4 class="mini_heading font_small dark letterSpacing center">
-                                                Acerca de nosotros
+                                                Programas sociales
 
                                             </h4>
                                             <h5
                                                 class="pad_large_xx font_small onlyHigDevice light_weight padTop_0 padBot_0">
                                                 <span class="pad_large">
-                                                    Producimos rosas con calidad de exportación en 15 distintas variedades para 
-                                                    satisfacer las diferentes necesidades en color de cada uno de nuestros clientes,
-                                                    esta es la más alta prioridad para FSMP.
+                                                    <p>En FSMP es de vital importancia cuidar no solo el medio ambiente con reforestaciones
+                                                        y ascesoramientos para el cuidado y tratado del agua. Apoyamos a la población que nos
+                                                    rodea, no solo con empleo, también nos preocupamos por su bienestar y el de sus familias, por ello: </p>
+                                                    <p>Hemos tomado acciones como la implementación de programas de vacunación, asesorías en
+                                                        el cuidado de salud física y mental, consientes de que la buena salud de las personas
+                                                        se refleja en su trabajo
+                                                         </p>
+                                                         <p>También contamos con programas especiales para emplear a madres solteras, personas
+                                                            de edad avanzada y jóvenes con capacidades diferentes, donde desarrollan actividades seguras
+                                                            para cada uno de ellos.
+                                                         </p>
+                                                         <p>Otro de nuestros compromisos es el mantenimiento  de camiones, donde con maquinaria
+                                                            y personal se apoya para reparar y mejorar caminos de terracería, logrando un beneficio
+                                                            para los pobladores de la comunidad donde nos localizamos.
+                                                         </p>
                                                 </span>
                                             </h5>
                                             <hr>
@@ -299,70 +265,10 @@
                                 </div>
 
 
-                                <hr class="space_max">
-
-                                <div class="row">
-
-                                    <div class="col-lg-5">
-
-                                        <!-- Tab navigation -->
-                                        <ul class="nav nav-tabs bottomBorder">
-                                            <li class="active"><a href="#tab1" data-toggle="tab">Misión</a></li>
-                                            <li><a href="#tab2" data-toggle="tab">Visión</a></li>
-                                        </ul>
-
                                         <!-- Tab content -->
 
-                                        <div class="tab-content">
+                                   </div>
 
-                                            <div class="tab-pane active" id="tab1">
-                                                <div class="col-lg-12">
-                                                    <div class="services_list2">
-                                                        <hr>
-                                                        <!-- Tab content -->
-                                                        <span class="icon">
-                                                            <i class="fa-solid fa-flower-tulip"></i></i></i>
-                                                        </span>
-                                                        <div class="desc">
-                                                            <p>Cubrir con producción especial, las fechas importantes en
-                                                                México y EUA. Conservando la misma calidad del resto del
-                                                                año.</p>
-                                                            <p> Tener las opciones de empaquetamiento y envió que cada
-                                                                cliente solicita de manera especial.</p>
-                                                            <p>Siempre estar a tiempo en las entregas de flor, en las
-                                                                condiciones que pida en cliente. </p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="tab-pane" id="tab2">
-                                                <div class="col-lg-12">
-                                                    <div class="services_list2">
-                                                        <hr>
-                                                        <!-- Tab content -->
-                                                        <span class="icon">
-                                                            <i class="fas fa-hand-holding-seedling"></i>
-                                                        </span>
-                                                        <div class="desc">
-                                                            <p>eEn FSMP la consolidación a nivel nacional e internacional de cada
-                                                                uno de nuestros productos, así como de nuestra marca, con innovaciones en
-                                                                el cultivo y procesamiento de rosas. Es de vital importancia para poder generar
-                                                                una real diferencia en cada uno de nuestros tallos. 
-                                                             </p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-
-                                        </div>
-
-                                        <div class="col-lg-7">
-                                            <img alt="image_alt_text" class="preload scale-with-grid alignCenter"
-                                                src="images/0.png" data-src="images/about_top_img.png">
-                                            <hr>
-                                        </div>
 
                                     </div>
 
@@ -377,96 +283,9 @@
                             </div>
 
 
-                            <div class="fullWidth relativePos  dashStyle">
-
-                                <hr class="separator_max">
-
-                                <div class="container">
-
-                                    <div class="row" data-animated-time="0" data-animated-in="animated fadeInUp"
-                                        data-animated-innerContent="yes" data-anchor-to="parent.parent">
-                                        <div class="col-lg-12">
-                                            <div class="page_header textAlignCenter">
-                                                <h4 class="font_medium">Nuestros objetivos</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" data-animated-time="0" data-animated-in="animated fadeInLeft"
-                                        data-animated-innerContent="yes" data-anchor-to="parent.parent">
-
-                                        <div class="col-lg-4 services_list2 ">
-                                            <span class="icon">
-                                                <i class="fa-solid fa-earth-americas"></i>
-                                            </span>
-                                            <div class="desc">
-                                                <h5>Exportación</h5>
-                                                <p>Cultivar rosas que cumplan con los estándares internacionales, en Norte América y Europa.
-                                                    Teniendo siempre la encomienda de cumplir en tiempo y forma a cada uno de nuestros clientes.
-                                                </p>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-4 services_list2">
-                                            <span class="icon">
-                                                <i class="fa-solid fa-share"></i></i></i>
-                                            </span>
-                                            <div class="desc">
-                                                <h5 class="bold_weight">Mercado interno</h5>
-                                                <p>Poder ofrecer a nuestros clientes nacionales rosas de calidad en calidad
-                                                    en cada una de sus variedades, que se ajusten a sus necesidades, Teniendo
-                                                    disponibilidad inmediata de nuestros productos para su comodidad.
-                                                 </p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-4 services_list2 ">
-                                        <span class="icon">
-                                            <i class="fa-solid fa-person"></i>
-
-                                        </span>
-                                        <h5>Comunidad</h5>
-                                        <p>Proveer empleo permanente, con salarios dignos y oportunidades de crecimiento
-                                            para hombres y mujeres por igual, sin importar la diferencia de credo,
-                                            usos o costumbres y respetando las ideologías de cada uno  </p>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4 services_list2 ">
-                                    <span class="icon">
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-
-                                    </span>
-                                    <h5>Compostaje</h5>
-                                    <p>Conservar y fomentar las políticas de reciclamiento de materiales y creación de
-                                        compostas.</p>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 services_list2 ">
-                                <span class="icon">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-
-                                </span>
-                                <h5>Capacidad</h5>
-                                <p>Una de las metas a corto plazo es duplicar nuestra capacidad instalada
-                                    con los mismos procesos productivos y estándares de calidad.
-                                    A mediano y largo plazo es el crecimiento sostenido de manera que podamos abarcar más clientes
-                                    no solo nacionales, si no también internacionales, cubriendo las necesidades
-                                    que el mercado va marcando, aumentando la variedad de rosas.
-                                </p>
-                            </div>
+                          
                         </div>
 
-                        <div class="col-lg-4 services_list2 ">
-                            <span class="icon">
-                                <i class="fa fa-star" aria-hidden="true"></i>
-
-                            </span>
-                            <h5>Cultura</h5>
-                            <p>Beneficiar a más comunidades inculcando la cultura de producir rosas con calidad de
-                                exportación.</p>
-                        </div>
                     </div>
                 </div>
 
