--- a/rentademaquinaria.html
+++ b/rentademaquinaria.html
@@ -154,8 +154,9 @@
       <ul class="nav smartMenu ">
           <!--  Add require site page navigation -->                    
           <li><a href="index.html" class="first active">Nosotros</a></li>
-          <li><a href="rentademaquinaria.html">Galería</a></li>
-          <li><a href="contactus.html" class="last"> Contacto</a></li>                                  
+                 <li><a href="rentademaquinaria.html">Galería</a></li>
+                    <li><a href="programas sociales.html" class="first active">Programas sociales</a></li>
+                  <li><a href="contactus.html" class="last"> Contacto</a></li>                                 
       </ul>
   </nav>  
   
