--- a/contactus.html
+++ b/contactus.html
@@ -216,12 +216,6 @@ If you need this button just remove the comment code
                                 <div class="col-lg-12 ">
                                     <div class="top_txt">
 
-                                            <div class="move_up_endSection">
-                                                <div class="move_up mini plain nextSection"> <span> <i
-                                                            class="icon icon-arrows-down fa-x darkColorText"></i>
-                                                    </span> </div>
-                                            </div>
-
                                         </div>
 
 
@@ -276,6 +270,14 @@ If you need this button just remove the comment code
                                 </div>
 
 
+                              
+
+                                <br>
+                                <hr class="separator_mini">
+                            </div>
+
+                            <div class="col-lg-7">
+                                <!--Email contact Form-->
                                 <div class="tag_leftTitle">
                                     <span class="icon"><i class="icon-basic-headset"></i></span>
                                     <h5>Teléfono</h5>
@@ -286,52 +288,12 @@ If you need this button just remove the comment code
                                     <span class="icon"><i class="icon-basic-mail-open"></i></span>
                                     <h5>Email</h5>
                                     <h5 class="light_weight"><a>ventas@floressierramagica.com</a></h5>
-                                    <h5 class="light_weight"><a>floressierramagica@gmail.com</a></h5>
+                                    <a href="mailto:ventas@floressierramagica.com">Enviar correo</a>
+<h5 class="light_weight"><a>floressierramagica@gmail.com</a></h5>
+<a href="mailto:floressierramagica@gmail.com">Enviar correo</a>
+
                                 </div>
-
-                                <br>
-                                <hr class="separator_mini">
-                            </div>
-
-                            <div class="col-lg-7">
-
-                                <h4 class="font_medium_x left_spacing">Formulario de contacto</h4>
-                                <hr class="separator_mini">
-                                <!--Email contact Form-->
-                                <form name="contact" class="contactusForm" method="post">
-                                    <div class="row-fluid">
-                                        <div class="col-lg-6">
-                                            <input type="text" value="Name" id="name" name="name"
-                                                class="col-lg-12 transprentBg dottedBorder"
-                                                onfocus="if(this.value == 'Name') {this.value = '';}"
-                                                onblur="if (this.value == '') {this.value = 'Name';}" />
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <input type="text" value="Email" id="email" name="email"
-                                                class="col-lg-12 transprentBg dottedBorder"
-                                                onfocus="if(this.value == 'Email') {this.value = '';}"
-                                                onblur="if (this.value == '') {this.value = 'Email';}" />
-                                        </div>
-                                    </div>
-                                    <div class="row-fluid">
-                                        <div class="col-lg-12">
-                                            <textarea cols="30" rows="5" id="comments" name="comments"
-                                                class="col-lg-12 transprentBg dottedBorder"
-                                                onfocus="if(this.value == 'Comments...') {this.value = '';}"
-                                                onblur="if (this.value == '') {this.value = 'Comments...';}">Comments...</textarea>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row-fluid">
-                                        <div class="col-lg-12 textAlignCenter alignCenter">
-                                            <button type="submit" id="email_submit"
-                                                class="button large transprentBg dashedBorder makeAnimate">
-                                                Envía tu mensaje
-                                            </button>
-                                            <div id="reply_message"></div>
-                                        </div>
-                                    </div>
-                                </form>
+                               
 
                                 <hr class="separator_max">
 
@@ -341,10 +303,7 @@ If you need this button just remove the comment code
                     </div>
 
                     <div class="fullWidth map_holder greyBackground relativePos borderTop textAlignCenter">
-                            <iframe
-                                src="https://www.google.com.mx/maps/place/Flores+de+la+Sierra+M%C3%A1gica/@20.0417424,-98.1825507,13z/data=!4m10!1m2!2m1!1sCorregidora+No.+4+Int.+5,+Fraccionamiento+Laguna+Seca,+Ahuazotepec,+Puebla,+M%C3%A9xico.+CP+73180!3m6!1s0x85d0674679dfb457:0x1e74dda1022a56d5!8m2!3d20.0349999!4d-98.1172222!15sCl1Db3JyZWdpZG9yYSBOby4gNCBJbnQuIDUsIEZyYWNjaW9uYW1pZW50byBMYWd1bmEgU2VjYSwgQWh1YXpvdGVwZWMsIFB1ZWJsYSwgTcOpeGljby4gQ1AgNzMxODBaWCJWY29ycmVnaWRvcmEgbm8gNCBpbnQgNSBmcmFjY2lvbmFtaWVudG8gbGFndW5hIHNlY2EgYWh1YXpvdGVwZWMgcHVlYmxhIG3DqXhpY28gY3AgNzMxODCSAQ1mbG93ZXJfbWFya2V04AEA!16s%2Fg%2F11j59qsygh?entry=ttu"
-                                style="border:0; width: 100vw; height: 400px" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59971.32274306267!2d-98.1825507!3d20.0417424!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d0674679dfb457%3A0x1e74dda1022a56d5!2sFlores%20de%20la%20Sierra%20M%C3%A1gica!5e0!3m2!1ses!2smx!4v1710024589422!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
 
 
